--- a/config/crd/patches/cainjection_in_secretengines.yaml
+++ b/config/crd/patches/cainjection_in_secretengines.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: secretengines.redhatcop.redhat.io
+  name: secretengines.vault.redhatcop.redhat.io
