--- a/config/crd/patches/webhook_in_secretengines.yaml
+++ b/config/crd/patches/webhook_in_secretengines.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: secretengines.redhatcop.redhat.io
+  name: secretengines.vault.redhatcop.redhat.io
 spec:
   conversion:
     strategy: Webhook
