--- a/config/crd/bases/redhatcop.redhat.io_secretengines.yaml
+++ b/config/crd/bases/redhatcop.redhat.io_secretengines.yaml
@@ -55,8 +55,13 @@ spec:
                   description:
                     type: string
                   force_no_cache:
+                    default: false
                     type: boolean
                   listing_visibility:
+                    default: hidden
+                    enum:
+                    - unauth
+                    - hidden
                     type: string
                   max_lease_ttl:
                     type: string
@@ -64,39 +69,36 @@ spec:
                     additionalProperties:
                       type: string
                     type: object
+                    x-kubernetes-map-type: granular
                   passthrough_request_headers:
                     items:
                       type: string
                     type: array
                   token_type:
                     type: string
-                required:
-                - default_lease_ttl
-                - force_no_cache
-                - max_lease_ttl
-                - options
                 type: object
               description:
                 type: string
               external_entropy_access:
+                default: false
                 type: boolean
               local:
+                default: false
                 type: boolean
               options:
                 additionalProperties:
                   type: string
+                default:
+                  version: "1"
                 type: object
+                x-kubernetes-map-type: granular
               seal_wrap:
+                default: false
                 type: boolean
               type:
                 type: string
             required:
-            - config
-            - description
-            - external_entropy_access
             - local
-            - options
-            - seal_wrap
             - type
             type: object
           status:
@@ -128,8 +130,13 @@ spec:
                       description:
                         type: string
                       force_no_cache:
+                        default: false
                         type: boolean
                       listing_visibility:
+                        default: hidden
+                        enum:
+                        - unauth
+                        - hidden
                         type: string
                       max_lease_ttl:
                         type: string
@@ -137,39 +144,36 @@ spec:
                         additionalProperties:
                           type: string
                         type: object
+                        x-kubernetes-map-type: granular
                       passthrough_request_headers:
                         items:
                           type: string
                         type: array
                       token_type:
                         type: string
-                    required:
-                    - default_lease_ttl
-                    - force_no_cache
-                    - max_lease_ttl
-                    - options
                     type: object
                   description:
                     type: string
                   external_entropy_access:
+                    default: false
                     type: boolean
                   local:
+                    default: false
                     type: boolean
                   options:
                     additionalProperties:
                       type: string
+                    default:
+                      version: "1"
                     type: object
+                    x-kubernetes-map-type: granular
                   seal_wrap:
+                    default: false
                     type: boolean
                   type:
                     type: string
                 required:
-                - config
-                - description
-                - external_entropy_access
                 - local
-                - options
-                - seal_wrap
                 - type
                 type: object
             type: object
