added openapi generation in  make fixed several api fields
Signed-off-by: raffaelespazzoli <raffaele.spazzoli@gmail.com>

--- a/config/crd/bases/redhatcop.redhat.io_secretengines.yaml
+++ b/config/crd/bases/redhatcop.redhat.io_secretengines.yaml
@@ -38,48 +38,56 @@ spec:
             properties:
               config:
                 properties:
-                  allowed_response_headers:
+                  allowedResponseHeaders:
                     items:
                       type: string
                     type: array
-                  audit_non_hmac_request_keys:
+                    uniqueItems: true
+                    x-kubernetes-list-type: set
+                  auditNonHMACRequestKeys:
                     items:
                       type: string
                     type: array
-                  audit_non_hmac_response_keys:
+                    uniqueItems: true
+                    x-kubernetes-list-type: set
+                  auditNonHMACResponseKeys:
                     items:
                       type: string
                     type: array
-                  default_lease_ttl:
+                    uniqueItems: true
+                    x-kubernetes-list-type: set
+                  defaultLeaseTTL:
                     type: string
                   description:
                     type: string
-                  force_no_cache:
+                  forceNoCache:
                     default: false
                     type: boolean
-                  listing_visibility:
+                  listingVisibility:
                     default: hidden
                     enum:
                     - unauth
                     - hidden
                     type: string
-                  max_lease_ttl:
+                  maxLeaseTTL:
                     type: string
                   options:
                     additionalProperties:
                       type: string
                     type: object
                     x-kubernetes-map-type: granular
-                  passthrough_request_headers:
+                  passthroughRequestHeaders:
                     items:
                       type: string
                     type: array
-                  token_type:
+                    uniqueItems: true
+                    x-kubernetes-list-type: set
+                  tokenType:
                     type: string
                 type: object
               description:
                 type: string
-              external_entropy_access:
+              externalEntropyAccess:
                 default: false
                 type: boolean
               local:
@@ -92,7 +100,7 @@ spec:
                   version: "1"
                 type: object
                 x-kubernetes-map-type: granular
-              seal_wrap:
+              sealWrap:
                 default: false
                 type: boolean
               type:
@@ -113,48 +121,56 @@ spec:
                 properties:
                   config:
                     properties:
-                      allowed_response_headers:
+                      allowedResponseHeaders:
                         items:
                           type: string
                         type: array
-                      audit_non_hmac_request_keys:
+                        uniqueItems: true
+                        x-kubernetes-list-type: set
+                      auditNonHMACRequestKeys:
                         items:
                           type: string
                         type: array
-                      audit_non_hmac_response_keys:
+                        uniqueItems: true
+                        x-kubernetes-list-type: set
+                      auditNonHMACResponseKeys:
                         items:
                           type: string
                         type: array
-                      default_lease_ttl:
+                        uniqueItems: true
+                        x-kubernetes-list-type: set
+                      defaultLeaseTTL:
                         type: string
                       description:
                         type: string
-                      force_no_cache:
+                      forceNoCache:
                         default: false
                         type: boolean
-                      listing_visibility:
+                      listingVisibility:
                         default: hidden
                         enum:
                         - unauth
                         - hidden
                         type: string
-                      max_lease_ttl:
+                      maxLeaseTTL:
                         type: string
                       options:
                         additionalProperties:
                           type: string
                         type: object
                         x-kubernetes-map-type: granular
-                      passthrough_request_headers:
+                      passthroughRequestHeaders:
                         items:
                           type: string
                         type: array
-                      token_type:
+                        uniqueItems: true
+                        x-kubernetes-list-type: set
+                      tokenType:
                         type: string
                     type: object
                   description:
                     type: string
-                  external_entropy_access:
+                  externalEntropyAccess:
                     default: false
                     type: boolean
                   local:
@@ -167,7 +183,7 @@ spec:
                       version: "1"
                     type: object
                     x-kubernetes-map-type: granular
-                  seal_wrap:
+                  sealWrap:
                     default: false
                     type: boolean
                   type:
