--- a/config/crd/bases/vault.redhatcop.redhat.io_secretengines.yaml
+++ b/config/crd/bases/vault.redhatcop.redhat.io_secretengines.yaml
@@ -38,140 +38,75 @@ spec:
             properties:
               config:
                 properties:
-                  allowed_response_headers:
+                  allowedResponseHeaders:
                     items:
                       type: string
                     type: array
-                  audit_non_hmac_request_keys:
+                    x-kubernetes-list-type: set
+                  auditNonHMACRequestKeys:
                     items:
                       type: string
                     type: array
-                  audit_non_hmac_response_keys:
+                    x-kubernetes-list-type: set
+                  auditNonHMACResponseKeys:
                     items:
                       type: string
                     type: array
-                  default_lease_ttl:
+                    x-kubernetes-list-type: set
+                  defaultLeaseTTL:
                     type: string
                   description:
                     type: string
-                  force_no_cache:
+                  forceNoCache:
+                    default: false
                     type: boolean
-                  listing_visibility:
+                  listingVisibility:
+                    default: hidden
+                    enum:
+                    - unauth
+                    - hidden
                     type: string
-                  max_lease_ttl:
+                  maxLeaseTTL:
                     type: string
                   options:
                     additionalProperties:
                       type: string
                     type: object
-                  passthrough_request_headers:
+                    x-kubernetes-map-type: granular
+                  passthroughRequestHeaders:
                     items:
                       type: string
                     type: array
-                  token_type:
+                    x-kubernetes-list-type: set
+                  tokenType:
                     type: string
-                required:
-                - default_lease_ttl
-                - force_no_cache
-                - max_lease_ttl
-                - options
                 type: object
               description:
                 type: string
-              external_entropy_access:
+              externalEntropyAccess:
+                default: false
                 type: boolean
               local:
+                default: false
                 type: boolean
               options:
                 additionalProperties:
                   type: string
+                default:
+                  version: "1"
                 type: object
-              seal_wrap:
+                x-kubernetes-map-type: granular
+              sealWrap:
+                default: false
                 type: boolean
               type:
                 type: string
             required:
-            - config
-            - description
-            - external_entropy_access
             - local
-            - options
-            - seal_wrap
             - type
             type: object
           status:
             description: SecretEngineStatus defines the observed state of SecretEngine
-            properties:
-              error:
-                type: string
-              mountStatus:
-                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
-                  of cluster Important: Run "make" to regenerate code after modifying
-                  this file'
-                properties:
-                  config:
-                    properties:
-                      allowed_response_headers:
-                        items:
-                          type: string
-                        type: array
-                      audit_non_hmac_request_keys:
-                        items:
-                          type: string
-                        type: array
-                      audit_non_hmac_response_keys:
-                        items:
-                          type: string
-                        type: array
-                      default_lease_ttl:
-                        type: string
-                      description:
-                        type: string
-                      force_no_cache:
-                        type: boolean
-                      listing_visibility:
-                        type: string
-                      max_lease_ttl:
-                        type: string
-                      options:
-                        additionalProperties:
-                          type: string
-                        type: object
-                      passthrough_request_headers:
-                        items:
-                          type: string
-                        type: array
-                      token_type:
-                        type: string
-                    required:
-                    - default_lease_ttl
-                    - force_no_cache
-                    - max_lease_ttl
-                    - options
-                    type: object
-                  description:
-                    type: string
-                  external_entropy_access:
-                    type: boolean
-                  local:
-                    type: boolean
-                  options:
-                    additionalProperties:
-                      type: string
-                    type: object
-                  seal_wrap:
-                    type: boolean
-                  type:
-                    type: string
-                required:
-                - config
-                - description
-                - external_entropy_access
-                - local
-                - options
-                - seal_wrap
-                - type
-                type: object
             type: object
         type: object
     served: true
