--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,17 +3,23 @@
 # It should be run by config/default
 resources:
 - bases/vault.redhatcop.redhat.io_secretengines.yaml
+- bases/vault.redhatcop.redhat.io_policies.yaml
+- bases/vault.redhatcop.redhat.io_policybindings.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_secretengines.yaml
+#- patches/webhook_in_policies.yaml
+#- patches/webhook_in_policybindings.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_secretengines.yaml
+#- patches/cainjection_in_policies.yaml
+#- patches/cainjection_in_policybindings.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
