--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,6 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
 - redhatcop_v1alpha1_secretengine.yaml
+- vault_v1alpha1_policy.yaml
+- vault_v1alpha1_policybinding.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
